# obs-quickstart

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
obs_quickstart/: __init__.py  configurator.py  hardware.py  main.py  scene_builder.py
tests/: test_obs_api_contract.py  test_scene_builder.py
videos/be-right-back/: index.html  index.motion.json  meta.json  package.json  shot-plan.json
videos/starting-soon/: index.html  index.motion.json  meta.json  package.json  shot-plan.json
videos/stream-ending/: index.html  index.motion.json  meta.json  package.json  shot-plan.json
